Bug 1338096 - correct the data type used in PHttpChannel.SetPriority(). r=mayhemer

MozReview-Commit-ID: k5paB7XsTV

--HG--
extra : rebase_source : 674d2bfc8343a4b66ed84627940a0795e7199906